# omnistreams-rs

./: Cargo.toml
examples/: file_copy.rs  range_producer.rs  squares.rs  squares_to_file.rs  tcp_pipe.rs  websocket_acceptor.rs  websocket_multiplexer.rs  websocket_to_file.rs
examples/websocket/: client.js
src/: consumer.rs  lib.rs  map_conduit.rs  multiplexer.rs  producer.rs  range_producer.rs  read_adapter.rs  sink_adapter.rs  transport.rs  write_adapter.rs
